fix menuba overflow

--- a/modules/renderer/containers/ActionBar.less
+++ b/modules/renderer/containers/ActionBar.less
@@ -14,7 +14,8 @@
     background: none;
     border: 0;
     outline: none;
-    width: 80px;
+    min-width: 70px;
+    max-width: 120px;
 
     .icon, span {
       transition: all .2s;
