--- a/modules/renderer/styles/base.less
+++ b/modules/renderer/styles/base.less
@@ -13,3 +13,9 @@ body {
 .fn-hide {
   display: none !important;
 }
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
